# LiteRT-LM

./: .bazelrc  .gitattributes  .gitignore  BUILD.antlr4  BUILD.directx_shader_compiler  BUILD.llguidance  BUILD.miniaudio  BUILD.minizip  BUILD.minja  BUILD.nanobind_json  BUILD.sentencepiece  BUILD.stb  BUILD.tokenizers_cpp  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  PATCH.abseil  PATCH.llguidance  PATCH.llguidance_grammar  PATCH.llguidance_numeric  PATCH.llguidance_parser  PATCH.llguidance_perf  PATCH.llguidance_regexvec  PATCH.minja  PATCH.nanobind_json  PATCH.rules_rust  PATCH.skia  PATCH.skia_user_config  PATCH.tensorflow  PATCH.toktrie  Package.swift  README.md  WORKSPACE  __init__.py  cargo-bazel-lock.json  requirements.txt  rust_cxx_bridge.bzl  version.bzl
c/: BUILD  CMakeLists.txt  engine.cc  engine.h  engine_internal.h  engine_test.cc
cmake/rust/python_parser/: Cargo.toml
cxxbridge_cmd/: BUILD.cxxbridge_cmd.bazel
runtime/components/: BUILD  CMakeLists.txt  lora.cc  lora.h  lora_manager.cc  lora_manager.h  lora_manager_test.cc  lora_test.cc  metal_exported_symbols.lds  model_resources.h  model_resources_litert_lm.cc  model_resources_litert_lm.h  model_resources_streaming.cc  model_resources_streaming.h  model_resources_streaming_test.cc  model_resources_task.cc  model_resources_task.h  model_resources_test.cc  prompt_template.cc  prompt_template.h  prompt_template_test.cc  sampler.h  sampler_factory.cc  sampler_factory.h  sampler_factory_failed_dlopen_test.cc  sampler_factory_test.cc  sampling_cpu_util.cc  sampling_cpu_util.h  sampling_cpu_util_test.cc  scoring_cpu_util.cc  scoring_cpu_util.h  scoring_cpu_util_test.cc  stop_token_detector.cc  stop_token_detector.h  stop_token_detector_test.cc  token_id_util.cc  token_id_util.h  token_id_util_test.cc  top_p_cpu_sampler.cc  top_p_cpu_sampler.h  (+3 more)
runtime/components/embedding_lookup/: BUILD  CMakeLists.txt  embedding_lookup.h  embedding_lookup_end_of_multi_modal.cc  embedding_lookup_end_of_multi_modal.h  embedding_lookup_end_of_multi_modal_test.cc  embedding_lookup_manager.cc  embedding_lookup_manager.h  embedding_lookup_manager_test.cc  embedding_lookup_multi_modal.cc  embedding_lookup_multi_modal.h  embedding_lookup_multi_modal_test.cc  embedding_lookup_text.cc  (+2 more)
runtime/conversation/: BUILD  CMakeLists.txt  channel_util.cc  channel_util.h  channel_util_test.cc  conversation.cc  conversation.h  conversation_test.cc  internal_callback_util.cc  internal_callback_util.h  internal_callback_util_test.cc  io_types.cc  io_types.h  prompt_utils.cc  prompt_utils.h  prompt_utils_test.cc  thinking_config.h
runtime/core/: BUILD  CMakeLists.txt  cached_session.cc  cached_session.h  cached_session_test.cc  engine_advanced_impl.cc  engine_advanced_impl_test.cc  pipeline.cc  pipeline.h  pipeline_test.cc  prefix_cache.cc  prefix_cache.h  prefix_cache_test.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  session_utils.cc  session_utils.h  session_utils_test.cc  tasks.cc  tasks.h  tasks_test.cc
runtime/engine/: BUILD  CMakeLists.txt  cpu_affinity_utils.cc  cpu_affinity_utils.h  engine.h  engine_factory.h  engine_settings.cc  engine_settings.h  engine_settings_test.cc  io_types.cc  io_types.h  io_types_test.cc  litert_lm_advanced_main.cc  litert_lm_lib.cc  litert_lm_lib.h  litert_lm_lib_test.cc  litert_lm_main.cc  litert_lm_main.exported_symbols  shared_flags.cc  shared_flags.h
runtime/executor/: BUILD  CMakeLists.txt  audio_executor.h  audio_executor_base.h  audio_executor_settings.cc  audio_executor_settings.h  audio_executor_settings_test.cc  audio_executor_utils.cc  audio_executor_utils.h  audio_executor_utils_test.cc  audio_litert_compiled_model_executor.cc  audio_litert_compiled_model_executor.h  audio_litert_compiled_model_executor_test.cc  common_utils.cc  common_utils.h  common_utils_test.cc  embedding_executor_base.h  embedding_executor_settings.cc  embedding_executor_settings.h  embedding_litert_compiled_model_executor.cc  embedding_litert_compiled_model_executor.h  embedding_litert_compiled_model_executor_test.cc  executor_settings_base.cc  executor_settings_base.h  executor_settings_base_test.cc  fake_llm_executor.cc  fake_llm_executor.h  fake_llm_executor_test.cc  kv_cache_interface.h  litert_compiled_model_executor_utils.cc  litert_compiled_model_executor_utils.h  litert_compiled_model_executor_utils_test.cc  llm_executor.h  llm_executor_base.h  llm_executor_interface.h  llm_executor_io_types.cc  llm_executor_io_types.h  llm_executor_io_types_test.cc  llm_executor_processed_tokens.cc  llm_executor_processed_tokens.h  (+41 more)
runtime/framework/: BUILD  CMakeLists.txt  execution_queue.cc  execution_queue.h  execution_queue_test.cc  resource_ids.h  resource_registry.h  resource_registry_test.cc  thread_options.h  threadpool.cc  threadpool.h  threadpool_test.cc  worker_thread.cc  worker_thread.h  worker_thread_pthread.cc  worker_thread_std_thread.cc
runtime/util/: BUILD  CMakeLists.txt  convert_tensor_buffer.h  data_stream.cc  data_stream.h  data_stream_test.cc  executor_data_util.cc  executor_data_util.h  executor_data_util_test.cc  external_file.proto  file_data_stream.cc  file_data_stream.h  file_data_stream_test.cc  file_format_util.cc  file_format_util.h  file_format_util_test.cc  file_util.cc  file_util.h  file_util_test.cc  litert_lm_loader.cc  litert_lm_loader.h  litert_lm_loader_test.cc  litert_lm_streaming_loader.cc  litert_lm_streaming_loader.h  litert_lm_streaming_loader_test.cc  litert_util.cc  litert_util.h  litert_util_test.cc  log_tensor_buffer.cc  log_tensor_buffer.h  log_tensor_buffer_test.cc  logging.cc  logging.h  logging_tensor_buffer.cc  logging_tensor_buffer.h  logging_test.cc  lora_data.cc  lora_data.h  lora_data_test.cc  lora_util.cc  (+25 more)
schema/core/: BUILD  CMakeLists.txt  litertlm_header.h  litertlm_header_schema.fbs  litertlm_header_test.cc  litertlm_print.cc  litertlm_print.h  litertlm_print_test.cc  litertlm_read.cc  litertlm_read.h  litertlm_read_test.cc  litertlm_section.h  litertlm_section_test.cc  litertlm_utils.cc  litertlm_utils.h  litertlm_utils_test.cc
(+524 files in other folders)
