# To update the Cargo.lock file, run:
# touch src/lib.rs
# CARGO_BAZEL_REPIN=1 bazel sync --only=crate_index
# rm src/lib.rs

[package]
name = "litert_lm_deps"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
antlr4rust = "0.5"
chrono = "0.4"
cxx = "=1.0.149"
googletest = "0.14"
indexmap = "2.12"
llguidance = { version = "=1.3.0", default-features = false, features = ["lark", "rayon", "ahash"] }
minijinja = { version = "=2.14.0", features = ["json", "preserve_order"] }
paste = "1.0"
quote = "1.0"
tokenizers = { version = "=0.21.0", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
syn = "2.0"

antlr_fc_tool_call_parser = { path = "cmake/rust/antlr_fc" }
antlr_python_tool_call_parser = { path = "cmake/rust/antlr_python" }
json_parser = { path = "cmake/rust/json_parser" }
python_parser = { path = "cmake/rust/python_parser" }
fc_parser = { path = "cmake/rust/fc_parser" }


[lib]
crate-type = ["staticlib"]
