load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "cxxbridge_cmd",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@cxxbridge_cmd_deps//:clap",
        "@cxxbridge_cmd_deps//:codespan-reporting",
        "@cxxbridge_cmd_deps//:proc-macro2",
        "@cxxbridge_cmd_deps//:quote",
        "@cxxbridge_cmd_deps//:syn",
    ],
)
